--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "assessment 2 deco2017 2022",
   "//main": "dist/index.html",
   "scripts": {
-    "start": "node public/server.js",
+    "start": "node ./public/server.js",
     "prestart": "parcel build ./public/index.html",
     "dev": "parcel serve ./public/index.html"
   },
